# tinyengine

./: .clangd  .gitmodules  CMakeLists.txt  compile.sh
.cache/clangd/index/: _fixes.hpp.6A43990D33369C2D.idx  _vectorize.hpp.16DD8A855DB3A076.idx  cocoa_init.m.2E1976D9929AF17D.idx  cocoa_joystick.h.7855DC5044026251.idx  cocoa_joystick.m.DE171FB933085729.idx  cocoa_monitor.m.3E021ABC0496B139.idx  cocoa_platform.h.9E3FF918F8014D48.idx  cocoa_time.c.0592F913728D7CD6.idx  cocoa_time.h.C31EE4D82E697778.idx  cocoa_window.m.173F9B2834106530.idx  common.hpp.2F83F756235C74F7.idx  compute_common.hpp.8976A1EA8433A9F6.idx  compute_vector_decl.hpp.AA99332CFDA592B1.idx  compute_vector_relational.hpp.A3F4DEB020D13AAB.idx  constants.hpp.381D25F4C7136CC9.idx  constants.inl.A993C80C296A8839.idx  context.c.3F34C61DC2F0C674.idx  dual_quaternion.hpp.355B94749D5E3F70.idx  dual_quaternion.inl.29EACD9BB72DC6AF.idx  egl_context.c.475FFC6EB0283E3C.idx  epsilon.hpp.3D422B54A19D0AD9.idx  epsilon.inl.D5A1A63E3EF6D7B1.idx  exponential.hpp.6EBB58AA991AC5FE.idx  func_common.inl.AEEE27BB9588C8FD.idx  func_exponential.inl.E249BC448091DD08.idx  func_geometric.inl.A162D5EA820EAFE7.idx  func_integer.inl.0065F7D4ADD92FE8.idx  func_matrix.inl.BCCD34C113304A7B.idx  func_packing.inl.D755578E1FD7AB06.idx  func_trigonometric.inl.22D8AF4E9C7B61D2.idx  func_vector_relational.inl.E0F5DC81C847F3B9.idx  fwd.hpp.E6E07E4985F2AE6F.idx  geometric.hpp.58623C218D0C9E81.idx  glad.c.CABB779155F76CBE.idx  glad.h.CF187900A0393B5F.idx  glfw3.h.7018A4F3BC5B167D.idx  glfw3native.h.4DAFFBF38A6E45E4.idx  glm.cpp.7E382B4EBE91E128.idx  glm.hpp.CCCFC455711EEBF8.idx  imconfig.h.5F28AB01690D9DDE.idx  (+195 more)
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
